Motion Blur causes random black surfaces on rigged models #41116

Closed
opened 2014-07-18 14:19:50 +02:00 by Sebastian Kreutz · 13 comments

System Information
Windows 7 Ultimate, Intel Core i7-4470, tested against the following GPUs:

  • nvidia geforce GTX 660 (CUDA)
  • nvidia geforce GTX 760 (CUDA)
  • ATi Radeon HD 7800 (CPU render)

Blender Version
Broken: 2.71
Worked: 2.70a

Short description of error
We are experiencing surfaces on rigged models to become black in the final render (Cycles) regardless of their material configuration when Motion Blur is enabled. This occurs seemingly random, as the sub-objects affected have the same material as other parts of the same rigged model. Depending on where we position the camera track, these objects sometimes appear black and sometimes with their appropriate material color. It appears as if only the diffuse color is affected, since depending on the material color, specular reflections are getting different tints. When motion blur is disabled, the colors render appropriately. The issue only occurs in the final render, the viewport preview render is not affected.
This issue was not present in 2.70a, so I would assume the issue is related to the new deformation motion blur introduced in 2.71: http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.71/Cycles

mblur_off.png

mblur_on.png

Exact steps for others to reproduce the error

  • Open the .blend test file (http://files.frame6.de/test/debugscene.zip) with Blender 2.71, it contains a camera track with the affected model
  • Render the first frame in Cycles with the existing presets: You notice that part of the roboter arm appears black

Now turn off motion blur in the render settings and notice how the roboter arm is fully orange as it should be

**System Information** Windows 7 Ultimate, Intel Core i7-4470, tested against the following GPUs: - nvidia geforce GTX 660 (CUDA) - nvidia geforce GTX 760 (CUDA) - ATi Radeon HD 7800 (CPU render) **Blender Version** Broken: 2.71 Worked: 2.70a **Short description of error** We are experiencing surfaces on rigged models to become black in the final render (Cycles) regardless of their material configuration when Motion Blur is enabled. This occurs seemingly random, as the sub-objects affected have the same material as other parts of the same rigged model. Depending on where we position the camera track, these objects sometimes appear black and sometimes with their appropriate material color. It appears as if only the diffuse color is affected, since depending on the material color, specular reflections are getting different tints. When motion blur is disabled, the colors render appropriately. The issue only occurs in the final render, the viewport preview render is not affected. This issue was not present in 2.70a, so I would assume the issue is related to the new deformation motion blur introduced in 2.71: http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.71/Cycles ![mblur_off.png](https://archive.blender.org/developer/F98394/mblur_off.png) ![mblur_on.png](https://archive.blender.org/developer/F98395/mblur_on.png) **Exact steps for others to reproduce the error** - Open the .blend test file (http://files.frame6.de/test/debugscene.zip) with Blender 2.71, it contains a camera track with the affected model - Render the first frame in Cycles with the existing presets: You notice that part of the roboter arm appears black # Now turn off motion blur in the render settings and notice how the roboter arm is fully orange as it should be

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @argosy_ops

Added subscriber: @argosy_ops
Sergey Sharybin self-assigned this 2014-07-18 15:26:21 +02:00

Will have a look later.

Will have a look later.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I can't say what is going wrong here, but here is a reduced test file that should make further investigation easier:
intro_debug5.blend

  • All objects removed, except the broken mesh + armature
  • Camera and light replaced by default objects
  • Motion blur turned off on both the object and the scene (the error still persists!)
  • Armature modifier disabled
  • Added a cube mesh in the same object data, somehow this gets created with inverted normals (i did not do that myself)

So it might actually be a normals problem of some kind ...

I can't say what is going wrong here, but here is a reduced test file that should make further investigation easier: [intro_debug5.blend](https://archive.blender.org/developer/F98428/intro_debug5.blend) * All objects removed, except the broken mesh + armature * Camera and light replaced by default objects * Motion blur turned off on both the object and the scene (the error still persists!) * Armature modifier disabled * Added a cube mesh in the same object data, somehow this gets created with inverted normals (i did not do that myself) So it might actually be a normals problem of some kind ...

Added subscriber: @RJW

Added subscriber: @RJW

I noticed that the part of the arm in question has a negative Z-scale. When I apply scale (CTL+A), it renders OK with or without motion blur.

I noticed that the part of the arm in question has a negative Z-scale. When I apply scale (CTL+A), it renders OK with or without motion blur.

@RJW thanks for helping narrow this down. I didn't take a look at scales and was wondering why it only happens to that part of the arm.
I can confirm that everything renders as it should once I apply the scale.

@RJW thanks for helping narrow this down. I didn't take a look at scales and was wondering why it only happens to that part of the arm. I can confirm that everything renders as it should once I apply the scale.

Added subscriber: @brecht

Added subscriber: @brecht

Motion blur has to decompose the matrix into translate/scale/rotation, interpolate, and then recompose it. Probably somewhere along the way the scale gets flipped.

Motion blur has to decompose the matrix into translate/scale/rotation, interpolate, and then recompose it. Probably somewhere along the way the scale gets flipped.

This issue was referenced by eb8f85d8be

This issue was referenced by eb8f85d8be8a14cbb8e97ba3b91c02cfd0ebbe42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit eb8f85d8be.

Closed by commit eb8f85d8be.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41116
No description provided.